--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
 body {
     background: linear-gradient(135deg, #ff4eac, #444358, #603958);
     min-height: 100vh;
-    color: #333;
+    color:white;
     padding-bottom: 40px;
 }
 
